welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:7: error: illegal start of simple pattern
  for (case <- 1 to nbPas)
       ^Methods:10: error: '<-' expected but '}' found.
}
^