welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {
  while (!estSurBiscuit){
  	var nbPas=0
  	avance()
  	nbPas=nbPas+1
  } prendBiscuit()
  for (case <- 1 to nbPas)
  	recule()
  poseBiscuit()  
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}